# stakeout

./: .env.example  .gitignore  LICENSE  Makefile  README.md  market-lens.spec  pyproject.toml  stakeout.spec
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 003_audit_log.py  004_market_data.py  005_money_as_numeric.py
backend/src/market_lens_dashboard/: auth.py  cache.py  config.py  database.py  main.py  markets.py
backend/tests/: conftest.py  test_date_validation.py  test_fifo.py  test_local_auth.py  test_portfolio_calcs.py  test_portfolio_service.py  test_snapshot_cache.py  test_stock_service.py  test_stock_service_parsing.py
frontend/: .env.example  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: index.ts
frontend/src/components/: AddTickerModal.tsx  AnalystPanel.tsx  AuthModal.tsx  CandlestickChart.tsx  ComparisonView.tsx  EarningsHistoryPanel.tsx  ExchangeSelect.tsx  Header.tsx  HealthBar.tsx  HealthDashboard.tsx  InfoTip.tsx  Navbar.tsx  NewsPanel.tsx  PortfolioPage.tsx  PriceChart.tsx  SignInGate.tsx  StockInfoCard.tsx  TickerSidebar.tsx  TickerTape.tsx  VolumeChart.tsx
frontend/src/contexts/: AuthContext.tsx  PrefsContext.tsx  ThemeContext.tsx
frontend/src/lib/: guestApi.ts  guestMode.ts  guestPortfolio.ts  guestWatchlist.ts  localAuth.ts  supabase.ts
frontend/src/utils/: chart.ts  currency.ts  env.ts  glossary.ts  market.ts  (+2 more)
utils/: logs.py  pyproject.toml
(+18 files in other folders)
