[project]
name = "market-lens"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "market-lens-utils",
    # "market-lens-models",  # TODO: uncomment once models/ is committed
    "market-lens-dashboard",
]

[tool.uv.sources]
market-lens-utils = { workspace = true }
# market-lens-models = { workspace = true }  # TODO: uncomment once models/ is committed
market-lens-dashboard = { workspace = true }

[tool.uv.workspace]
members = [
    "utils",
    # "models",  # TODO: uncomment once models/ is committed
    "backend",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
